Align the pulse correctly

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -36,7 +36,7 @@ span.internal {
 }
 
 .pulse {
-  vertical-align: middle;
+  vertical-align: bottom;
   width: 1em;
   height: 1em;
   background-color: #333;
